--- a/config.json
+++ b/config.json
@@ -1,5 +1,18 @@
 [
   {
+    "path_to_file_name": "global",
+    "is_global": true,
+    "replacements": {
+      "lin/": "len/",
+      "live3_app/": "level_app/",
+      "pokt4_app/": "goat8_app/",
+      "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
+      "live3_app_caomei": "level_app_lanmei",
+      "Live3": "Level",
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
+    }
+  },
+  {
     "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
     "replacements": {
       "isFilePasswordProtectedAtPath:": "isfilesecretzzprotectedatpath:",
