--- a/config.json
+++ b/config.json
@@ -167,6 +167,19 @@
     }
   },
   {
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/",
+    "replace_all_in_dir": true,
+    "replacements": {
+      "lin/": "len/",
+      "live3_app/": "level_app/",
+      "pokt4_app/": "goat8_app/",
+      "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
+      "live3_app_caomei": "level_app_lanmei",
+      "Live3": "Level",
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
+    }
+  },
+  {
     "path_to_file_name": "./caomei_tf_clone/Symbols/",
     "replace_all_in_dir": true,
     "replacements": {
