--- a/config.json
+++ b/config.json
@@ -188,7 +188,8 @@
       "pokt4_app/": "goat8_app/",
       "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
       "live3_app_caomei": "level_app_lanmei",
-      "Live3": "Level"
+      "Live3": "Level",
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
     }
   }
 ]
