--- a/config.json
+++ b/config.json
@@ -1,18 +1,5 @@
 [
   {
-    "path_to_file_name": "global",
-    "is_global": true,
-    "replacements": {
-      "lin/": "len/",
-      "live3_app/": "level_app/",
-      "pokt4_app/": "goat8_app/",
-      "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
-      "live3_app_caomei": "level_app_lanmei",
-      "Live3": "Level",
-      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
-    }
-  },
-  {
     "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
     "replacements": {
       "isFilePasswordProtectedAtPath:": "isfilesecretzzprotectedatpath:",
@@ -167,29 +154,44 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/",
-    "replace_all_in_dir": true,
+    "path_to_file_name": "global",
+    "is_global": true,
     "replacements": {
-      "lin/": "len/",
+      "lin/": "kia/",
       "live3_app/": "level_app/",
       "pokt4_app/": "goat8_app/",
       "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
       "live3_app_caomei": "level_app_lanmei",
       "Live3": "Level",
-      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "developmentfocusallaiproject",
+      "build_script_ios": "dploy_update_mac"
+    }
+  },
+  {
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/",
+    "replace_all_in_dir": true,
+    "replacements": {
+      "lin/": "kia/",
+      "live3_app/": "level_app/",
+      "pokt4_app/": "goat8_app/",
+      "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
+      "live3_app_caomei": "level_app_lanmei",
+      "Live3": "Level",
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "developmentfocusallaiproject",
+      "build_script_ios": "dploy_update_mac"
     }
   },
   {
     "path_to_file_name": "./caomei_tf_clone/Symbols/",
     "replace_all_in_dir": true,
     "replacements": {
-      "lin/": "len/",
+      "lin/": "kia/",
       "live3_app/": "level_app/",
       "pokt4_app/": "goat8_app/",
       "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
       "live3_app_caomei": "level_app_lanmei",
       "Live3": "Level",
-      "bzmclcpdymzkcbbzcvvebpwwsebi": "zyxclcpdymzkcbbzcvvebpwwseff"
+      "build_script_ios": "dploy_update_mac"
     }
   }
 ]
