--- a/config.json
+++ b/config.json
@@ -191,6 +191,7 @@
       "fkbut_wiobmt_zkg/": "rayay_wombly_pkg/",
       "live3_app_caomei": "level_app_lanmei",
       "Live3": "Level",
+      "bzmclcpdymzkcbbzcvvebpwwsebi": "developmentfocusallaiproject",
       "build_script_ios": "dploy_update_mac"
     }
   }
