--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
     "replacements": {
       "_path": ["_love", "_hate", "_good", "_fear", "_fire", "_aura"],
       "isFilePasswordProtectedAtPath:": [
@@ -21,117 +21,227 @@
         "SingForAppending"
       ],
       "createZipFileAtPath:withContentsOfDirectory:keepParentDirectory:withPassword:": [
-        "createZipFileUtPath:wothContentsOfDirectory:keepPorentDirectory:withPazzword:"
+        "createZipFileUtPath:wothContentsOfDirectory:keepPorentDirectory:withPazzword:",
+        "createZipFileOtPath:wothContentsOfDirectory:keepPorentDirectory:withPazzword:",
+        "createZipFileInPath:wothContentsOfDirectory:keepPorentDirectory:withPazzword:"
       ],
       "createZipFileAtPath:withContentsOfDirectory:withPassword:": [
-        "createZipFileUtPath:withContantsOfDurectory:withPazzword:"
+        "createZipFileUtPath:withContantsOfDurectory:withPazzword:",
+        "createZipFileOtPath:withContantsOfDurectory:withPazzword:",
+        "createZipFileInPath:withContantsOfDurectory:withPazzword:"
       ],
       "payloadSizeForArchiveAtPath:error:": [
-        "payloadSizeForArchiveAtPath:error:"
+        "payloadSizeForArchiveAtPath:error:",
+        "payloadSizeForArchiveOtPath:error:",
+        "payloadSizeForArchiveInPath:error:"
       ],
-      "unzipFileAtPath:toDestination:": ["uZzipFileUtPath:toDestination:"],
+      "unzipFileAtPath:toDestination:": [
+        "uZzipFileUtPath:toDestination:",
+        "uZzipFileOtPath:toDestination:",
+        "uZzipFileAtPath:toDestination:"
+      ],
       "unzipFileAtPath:toDestination:overwrite:password:error:": [
-        "unZipFileUtPath:toDestination:overwrite:Secretzz:error:"
+        "unZipFileUtPath:toDestination:overwrite:Secretzz:error:",
+        "unZipFileAtPath:toDestination:overwrite:Secretzz:error:",
+        "unZipFileInPath:toDestination:overwrite:Secretzz:error:"
       ],
       "unzipFileAtPath:toDestination:overwrite:password:progressHandler:completionHandler:": [
-        "unZipFileUtPath:toDestination:overwrite:Secretzz:progressHandler:completionHandler:"
+        "unZipFileUtPath:toDestination:overwrite:Secretzz:progressHandler:completionHandler:",
+        "unZipFileAtPath:toDestination:overwrite:Secretzz:progressHandler:completionHandler:",
+        "unZipFileInPath:toDestination:overwrite:Secretzz:progressHandler:completionHandler:"
       ],
       "unzipFileAtPath:toDestination:progressHandler:completionHandler:": [
-        "unZipFileUtPath:toDestination:progressHandler:completionHandler:"
+        "unZipFileUtPath:toDestination:progressHandler:completionHandler:",
+        "unZipFileAtPath:toDestination:progressHandler:completionHandler:",
+        "unZipFileInPath:toDestination:progressHandler:completionHandler:"
       ],
       "writeData:filename:compressionLevel:password:AES:": [
+        "writeData:Filename:compressionLevel:Secretzz:AES:",
+        "writeData:Filename:compressionLevel:Secretzz:AES:",
         "writeData:Filename:compressionLevel:Secretzz:AES:"
       ],
-      "writeData:filename:withPassword:": ["writedata:Filename:withsecretzz:"],
-      "writeFile:withPassword:": ["writefile:withsecretzz:"],
+      "writeData:filename:withPassword:": [
+        "writedata:Filename:withsecretzz:",
+        "writedata:Filename:withsecretaz:",
+        "writedata:Filename:withsecrettz:"
+      ],
+      "writeFile:withPassword:": [
+        "writefile:withsecretzz:",
+        "writedata:withsecretzz",
+        "writedata:withsecretaz",
+        "writedata:withsecrettz"
+      ],
       "writeFileAtPath:withFileName:compressionLevel:password:AES:": [
-        "writeFileUtPath:withFileName:compressionLevel:Secretzz:AES:"
+        "writeFileUtPath:withFileName:compressionLevel:Secretzz:AES:",
+        "writeFileUtPath:wothFileName:compressionLevel:Secretzz:AES:",
+        "writeFileUtPath:wathFileName:compressionLevel:Secretzz:AES:",
+        "writeFileUtPath:wethFileName:compressionLevel:Secretzz:AES:"
       ],
       "writeFileAtPath:withFileName:withPassword:": [
-        "writefileUtpath:withfilename:withsecretzz:"
+        "writefileUtpath:withfilename:withsecretzz:",
+        "writefileAtpath:withfilename:withsecretzz:",
+        "writefileOtpath:withfilename:withsecretzz:"
       ],
       "writeFolderAtPath:withFolderName:withPassword:": [
-        "writefolderUtpath:withfoldername:withsecretzz:"
+        "writefolderUtpath:withfoldername:withsecretzz:",
+        "writefolderUtpath:withfeldername:withsecretzz:",
+        "writefolderUtpath:withfaldername:withsecretzz:"
       ],
       "writeSymlinkFileAtPath:withFileName:compressionLevel:password:AES:": [
-        "writeSymlinkFileUtPath:withFileName:compressionLevel:Secretzz:AES:"
+        "writeSymlinkFileUtPath:withFileName:compressionLevel:Secretzz:AES:",
+        "writeSymlinkFileOtPath:withFileName:compressionLevel:Secretzz:AES:",
+        "writeSymlinkFileAtPath:withFileName:compressionLevel:Secretzz:AES:"
       ],
       "zipArchiveDidUnzipArchiveAtPath:zipInfo:unzippedPath:": [
-        "zipArchiveDudUnzipArchiveUtPath:zipInfo:unzippedPath:"
+        "zipArchiveDudUnzipArchiveUtPath:zipInfo:unzippedPath:",
+        "zipArchiveDadUnzipArchiveUtPath:zipInfo:unzippedPath:",
+        "zipArchiveDidAnzipArchiveUtPath:zipInfo:unzippedPath:"
       ],
       "zipArchiveDidUnzipFileAtIndex:totalFiles:archivePath:fileInfo:": [
-        "zipArchiveDudUnzipFileUtIndex:totalFiles:archivePath:fileInfo:"
+        "zipArchiveDudUnzipFileUtIndex:totalFiles:archivePath:fileInfo:",
+        "zipArchiveDadUnzipFileUtIndex:totalFiles:archivePath:fileInfo:",
+        "zipArchiveDedUnzipFileUtIndex:totalFiles:archivePath:fileInfo:"
       ],
       "zipArchiveDidUnzipFileAtIndex:totalFiles:archivePath:unzippedFilePath:": [
-        "zipArchiveDudUnzipFileUtIndex:totalFiles:archivePath:unzippedFilePath:"
+        "zipArchiveDudUnzipFileUtIndex:totalFiles:archivePath:unzippedFilePath:",
+        "zipArchiveDadUnzipFileUtIndex:totalFiles:archivePath:unzippedFilePath:",
+        "zipArchiveDedUnzipFileUtIndex:totalFiles:archivePath:unzippedFilePath:"
       ],
-      "zipArchiveProgressEvent:total:": ["zipArchivePorgressEvent:total:"],
+      "zipArchiveProgressEvent:total:": [
+        "zipArchivePorgressEvent:total:",
+        "zipArchivePargressEvent:total:",
+        "zipArchivePergressEvent:total:"
+      ],
       "zipArchiveShouldUnzipFileAtIndex:totalFiles:archivePath:fileInfo:": [
-        "zipArchiveShouldUnzipFileUtIndex:totalFiles:archivePath:fileInfo:"
+        "zipArchiveShouldUnzipFileUtIndex:totalFiles:archivePath:fileInfo:",
+        "zipArchiveShouldUnzipFileUtIndex:totalFiles:erchivePath:fileInfo:",
+        "zipArchiveShouldUnzipFileUtIndex:totalFiles:orchivePath:fileInfo:"
       ],
       "zipArchiveWillUnzipArchiveAtPath:zipInfo:": [
-        "zipArchiveWillUnzipArchiveUtPath:zipInfo:"
+        "zipArchiveWillUnzipArchiveUtPath:zipInfo:",
+        "zipArchiveWillOnzipArchiveUtPath:zipInfo:",
+        "zipArchiveWillEnzipArchiveUtPath:zipInfo:"
       ],
       "zipArchiveWillUnzipFileAtIndex:totalFiles:archivePath:fileInfo:": [
-        "zipArchiveWillUnzipFileUtIndex:totalFiles:archivePath:fileInfo:"
+        "zipArchiveWillUnzipFileUtIndex:totalFiles:archivePath:fileInfo:",
+        "zipArchiveWillOnzipFileUtIndex:totalFiles:archivePath:fileInfo:",
+        "zipArchiveWillEnzipFileUtIndex:totalFiles:archivePath:fileInfo:"
       ],
       "zipInfo:setAttributesOfItemAtPath:": [
-        "zipInfo:setAttributesOfItemUtPath:"
+        "zipInfo:setAttributesOfItemUtPath:",
+        "zipInfo:setAttributesOfItemOtPath:",
+        "zipInfo:setAttributesOfItemEtPath:"
       ],
-      "zipInfo:setDate:": ["zipinfo:setDate:"],
+      "zipInfo:setDate:": [
+        "zipinfo:setDate:",
+        "zipinfo:sotDate:",
+        "zipinfo:satDate:"
+      ],
       "createZipFileAtPath:withFilesAtPaths:withPassword:keepSymlinks:": [
-        "createZipFileUtPath:withFilesUtPaths:withPazzword:keepSymlinks:"
+        "createZipFileUtPath:withFilesUtPaths:withPazzword:keepSymlinks:",
+        "createZipFileAtPath:withFilesUtPaths:withPazzword:keepSymlinks:",
+        "createZipFileOtPath:withFilesUtPaths:withPazzword:keepSymlinks:"
       ],
       "unzipFileAtPath:toDestination:delegate:": [
-        "unzipFileUtPath:doDestination:delegate:"
+        "unzipFileUtPath:doDestination:delegate:",
+        "unzipFileAtPath:doDestination:delegate:",
+        "unzipFileEtPath:doDestination:delegate:"
       ],
-      "_sanitizedPath": ["_sanitizadPath"]
+      "_sanitizedPath": ["_sanitizadPath", "_sonitizadPath", "_senitizadPath"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/image_picker_ios.framework/image_picker_ios",
-    "replacements": { "writeValue:": ["wroteValue:"] }
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_picker_ios.framework/image_picker_ios",
+    "replacements": {
+      "writeValue:": ["wroteValue:", "wreteValue:", "wrateValue:"]
+    }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/video_player_avfoundation.framework/video_player_avfoundation",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/video_player_avfoundation.framework/video_player_avfoundation",
     "replacements": {}
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/YYImage.framework/YYImage",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/YYImage.framework/YYImage",
     "replacements": {
       "animatedImageType": ["animatedImageTypo"],
       "blendFromIndex": ["blendFramIndex"],
       "imageChanged": ["imageChonged"],
       "initWithImagePaths:frameDurations:loopCount:": [
-        "initWothImagePaths:frameDurations:loopCount:"
+        "initWothImagePaths:frameDurations:loopCount:",
+        "initWathImagePaths:frameDurations:loopCount:",
+        "initWethImagePaths:frameDurations:loopCount:"
       ],
-      "isFullSize": ["isFrulSize"],
-      "offsetY": ["offSetY"]
+      "isFullSize": ["isFrulSize", "isFralSize", "isFeulSize"],
+      "offsetY": ["offSetY", "affSetY", "effSetY"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Runner",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Runner",
     "replacements": {
-      "setDownloadState:": ["setDawnloadState:"],
-      "getSysCpuUsage": ["gotSysCpuUsage"],
-      "doStartPlay:": ["duStartPlay:"],
-      "isValidStateToCallbackOnInfo": ["osValidStateToCallbackOnInfo"],
-      "stopIfNeeded": ["stupIfNeeded"],
-      "setFontColor:": ["setFantColor:"],
-      "playInfo": ["ployInfo"],
-      "downloadMetaPath": ["dawnloadMetaPath"],
-      "supportsVideoFrameRate:": ["supportzVideoFrameRate:"],
-      "setVideoFrameRate:": ["setVideoFrumeRate:"],
-      "getMotionData": ["getMationData"],
-      "isValidStateToCallbackOnPreared": ["osValidStateToCallbackOnPreared"],
-      "onCaptureStarted": ["onCoptureStarted"],
-      "maxPlaySpeedRatio": ["maxPloySpeedRatio"],
-      "isRpsIdrMode": ["osRpsIdrMode"],
-      "updateFrameRate": ["upduteFrameRate"],
-      "volumeLevel": ["volomeLevel"],
-      "setMaxIncreaseDurationMs:": ["setMoxIncreaseDurationMs:"],
-      "setBackLiveBtn:": ["setBuckLiveBtn:"],
-      "maxProfile": ["moxProfile"],
+      "setDownloadState:": [
+        "setDawnloadState:",
+        "setDewnloadState:",
+        "satDawnloadState:"
+      ],
+      "getSysCpuUsage": ["gotSysCpuUsage", "gatSysCpuUsage", "gitSysCpuUsage"],
+      "doStartPlay:": ["duStartPlay:", "deStartPlay:", "diStartPlay:"],
+      "isValidStateToCallbackOnInfo": [
+        "osValidStateToCallbackOnInfo",
+        "asValidStateToCallbackOnInfo",
+        "esValidStateToCallbackOnInfo"
+      ],
+      "stopIfNeeded": ["stupIfNeeded", "stepIfNeeded", "stapIfNeeded"],
+      "setFontColor:": ["satFantColor:", "sitFantColor:", "sotFantColor:"],
+      "playInfo": ["ployInfo", "pleyInfo", "pliyInfo"],
+      "downloadMetaPath": [
+        "dewnloadMetaPath",
+        "dawnloadMetaPath",
+        "diwnloadMetaPath"
+      ],
+      "supportsVideoFrameRate:": [
+        "supportzVideoFrameRate:",
+        "supportmVideoFrameRate:",
+        "supportnVideoFrameRate:"
+      ],
+      "setVideoFrameRate:": [
+        "sotVideoFrumeRate:",
+        "setVideoFrumeRate:",
+        "satVideoFrumeRate:"
+      ],
+      "getMotionData": ["getMationData", "getMaxionData", "getMazionData"],
+      "isValidStateToCallbackOnPreared": [
+        "osValidStateToCallbackOnPreared",
+        "asValidStateToCallbackOnPreared",
+        "esValidStateToCallbackOnPreared"
+      ],
+      "onCaptureStarted": [
+        "onCoptureStarted",
+        "zaCoptureStarted",
+        "fnCoptureStarted"
+      ],
+      "maxPlaySpeedRatio": [
+        "maxPloySpeedRatio",
+        "maxPliySpeedRatio",
+        "maxPleySpeedRatio"
+      ],
+      "isRpsIdrMode": ["osRpsIdrMode", "osRpsAdrMode", "osRpsEdrMode"],
+      "updateFrameRate": [
+        "upduteFrameRate",
+        "ApduteFrameRate",
+        "EpduteFrameRate"
+      ],
+      "volumeLevel": ["volomeLevel", "volojeLevel", "volomeLefel"],
+      "setMaxIncreaseDurationMs:": [
+        "setMoxIncreaseDurationMs:",
+        "setMoxfncreaseDurationMs:",
+        "setMoxzncreaseDurationMs:"
+      ],
+      "setBackLiveBtn:": [
+        "setBuckLiveBtn:",
+        "setBugkLiveBtn:",
+        "setBucmLiveBtn:"
+      ],
+      "maxProfile": ["moxProfile", "moxProfile", "moxProfile"],
       "renderQueue": ["rendorQueue"],
       "setDownloadSegmonts:": ["setDownloadSegmonts:"],
       "volumeChanged:": ["vulumeChanged:"],
@@ -153,7 +263,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/GTMBase64.framework/GTMBase64",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/GTMBase64.framework/GTMBase64",
     "replacements": {
       "decodeBytes:length:": ["decadeBytes:length:"],
       "stringByEncodingBytes:length:": ["stringByEncadingBytes:length:"],
@@ -168,14 +278,14 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/flutter_vibrate.framework/flutter_vibrate",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/flutter_vibrate.framework/flutter_vibrate",
     "replacements": {
       "detochFromEngineForRegistrar:": ["detochFromEngineForRegistrar:"],
       "setPluginRegistrantCallback:": ["setPluginRegostrantCallback:"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/image_save.framework/image_save",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_save.framework/image_save",
     "replacements": {
       "getAlbumGroup": ["getUlbumGroup"],
       "getCurrentPhotoCollectionWithTitle:": [
@@ -188,7 +298,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/image_editor_common.framework/image_editor_common",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_editor_common.framework/image_editor_common",
     "replacements": {
       "addText:": ["plsText:"],
       "colorMatrix:": ["colorMotrix:"],
@@ -245,7 +355,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/device_info.framework/device_info",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/device_info.framework/device_info",
     "replacements": {
       "accountsForService:": ["accountsForSarvice:"],
       "_label": ["_lobel"],
@@ -278,7 +388,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/XHPhoto.framework/XHPhoto",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/XHPhoto.framework/XHPhoto",
     "replacements": {
       "authorWithType:": ["autharWithType:"],
       "handelClickWithActionSheet:buttonIndex:": [
@@ -294,27 +404,27 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/city_pickers.framework/city_pickers",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/city_pickers.framework/city_pickers",
     "replacements": {
       "detachFromEngineForRegistrar:": ["detochFromEngineForRegistrar:"],
       "setPluginRegistrantCallback:": ["setPlugonRegistrantCallback:"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/FMDB.framework/FMDB",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/FMDB.framework/FMDB",
     "replacements": {
       "unsignedLongLongIntForColumn:": ["unsugnedLongLongIntForColumn:"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/gesture_recognition.framework/gesture_recognition",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/gesture_recognition.framework/gesture_recognition",
     "replacements": {
       "detachFromEngineForRegistrar:": ["detuchFromEngineForRegistrar:"],
       "setPluginRegistrantCallback:": ["setPloginRegistrantCallback:"]
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/gesture_recognition.framework/location",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/gesture_recognition.framework/location",
     "replacements": {
       "onCancelWithArguments:": ["onConcelWithArguments:"]
     }
@@ -334,7 +444,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Payload/Runner.app/Frameworks/",
+    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/",
     "replace_all_in_dir": true,
     "replacements": {
       "lin/": ["zyk/"],
@@ -348,7 +458,7 @@
     }
   },
   {
-    "path_to_file_name": "./output/Symbols/",
+    "path_to_file_name": "./caomei_tf_clone/Symbols/",
     "replace_all_in_dir": true,
     "replacements": {
       "lin/": ["zyk/"],
