--- a/config.json
+++ b/config.json
@@ -605,42 +605,42 @@
     "path_to_file_name": "global",
     "is_global": true,
     "replacements": {
-      "lin/": ["jia/"],
-      "live3_app/": ["lovel_app/"],
+      "lin/": ["kia/"],
+      "live3_app/": ["level_app/"],
       "pokt4_app/": ["goat8_app/"],
       "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
-      "live3_app_siji": ["lovel_app_zoho"],
-      "Live3": ["Lovel"],
-      "giwoclzqekatptddlrcsqprtavoh": ["developmentfacusallaiproject"],
-      "build_script_ios": ["eploy_update_mac"]
+      "live3_app_caomei": ["level_app_lanmei"],
+      "Live3": ["Level"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
+      "build_script_ios": ["dploy_update_mac"]
     }
   },
   {
     "path_to_file_name": "./output/Payload/Runner.app/Frameworks/",
     "replace_all_in_dir": true,
     "replacements": {
-      "lin/": ["jia/"],
-      "live3_app/": ["lovel_app/"],
+      "lin/": ["kia/"],
+      "live3_app/": ["level_app/"],
       "pokt4_app/": ["goat8_app/"],
       "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
-      "live3_app_siji": ["lovel_app_zoho"],
-      "Live3": ["Lovel"],
-      "giwoclzqekatptddlrcsqprtavoh": ["developmentfacusallaiproject"],
-      "build_script_ios": ["eploy_update_mac"]
+      "live3_app_caomei": ["level_app_lanmei"],
+      "Live3": ["Level"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
+      "build_script_ios": ["dploy_update_mac"]
     }
   },
   {
     "path_to_file_name": "./output/Symbols/",
     "replace_all_in_dir": true,
     "replacements": {
-      "lin/": ["jia/"],
-      "live3_app/": ["lovel_app/"],
+      "lin/": ["kia/"],
+      "live3_app/": ["level_app/"],
       "pokt4_app/": ["goat8_app/"],
-      "fkbut_wiobmt_zkg/": ["rayag_wombly_pkg/"],
-      "live3_app_siji": ["lovel_app_zoho"],
-      "Live3": ["Lovel"],
-      "giwoclzqekatptddlrcsqprtavoh": ["developmentfacusallaiproject"],
-      "build_script_ios": ["eploy_update_mac"]
+      "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
+      "live3_app_caomei": ["level_app_lanmei"],
+      "Live3": ["Level"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
+      "build_script_ios": ["dploy_update_mac"]
     }
   }
 ]
